fixed menu visibility, style refactoring

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -60,32 +60,37 @@ header {
   border-radius: 5px;
   padding: 4px;
   border: 1px solid $primary-color;
-}
 
-.material-symbols-outlined:hover {
-  border: 1px solid $gray-color;
+  &:hover {
+    border: 1px solid $gray-color;
+  }
 }
 
 .dropdown-content {
+  border-radius: 5px;
   display: none;
   position: absolute;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
   z-index: 1;
   background-color: #f9f9f9;
+
+  a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+
+    &:hover {
+      background-color: $primary-color;
+      color: white;
+    }
+  }
 }
 
 .show {
   display: block;
 }
 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
 
-.dropdown-content a:hover {
-  background-color: #f1f1f1;
-}
+
